tests/src/frontend/typechecking/invalid/overridable_private.sk
base class Foo {
  overridable private fun foo(): void {
    void
  }
}

class Bar extends Foo {
  private fun foo(): void {
    void
  }
}
